--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,7 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="heading_text_size">16dp</dimen>
+    <dimen name="sub_heading_text_size">12dp</dimen>
+    <dimen name="padding">3dp</dimen>
 </resources>
